Implementation of the register logic, connecting with the sql database

--- a/API-Todo-List/appsettings.json
+++ b/API-Todo-List/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Db_Todo_List": "Server=localhost;Database=DbToDo;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
